tdf#101059 Fix exporting spreadsheet into .xlsx format

In every sheet.xml there is information about dimensions, like:
<dimension ref="A1:AMJ177"/>. During export by LibreOffice to .xlsx,
when row or column has maximum value, the dimension was
truncated to <dimension ref="A:AMJ"/> or <dimension ref="1:177"/>.
It was caused problems with Office 2007 import.
This patch is fixing that, and allow open documents exported by LO
properly by MS Office.

Change-Id: Idda1455d1f9db08ade0871110fe40be2667c176c